@@ -1,3 +1,13 @@
+2011-04-15  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        show stderr files and httpd log files
+        https://bugs.webkit.org/show_bug.cgi?id=58714
+
+        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
+        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:
+
 2011-04-15  Shishir Agrawal  <shishir@chromium.org>
 
         Reviewed by James Robinson.
